# rufusdc

./: CMakeLists.txt  ProjectHome.md  README.txt
dcpp/: CMakeLists.txt
doc/: downloadfromscratch.tcpdump  strongdc.tcpdump
kgui/: CMakeLists.txt  actionfactory.cpp  actionfactory.h  client.cpp  client.h  clientthread.cpp  clientthread.h  clientthreadhub.cpp  clientthreadhub.h  connectdialog.cpp  downloadinfo.cpp  downloadinfo.h  filelistwidget.cpp  filelistwidget.h  hub.cpp  hub.h  hubwidget.cpp  hubwidget.h  hubwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  searchwidget.cpp  searchwidget.h  searchwidget.ui  smartsorttreeitem.h  tabcontent.cpp  tabcontent.h  tabwidget.cpp  tabwidget.h  transferinfo.h  transferwidget.cpp  transferwidget.h  transferwidget.ui  userinfo.cpp  userinfo.h  usermodel.cpp  usermodel.h  utils.cpp  (+1 more)
rufusdc/: CMakeLists.txt  activedownload.cpp  activedownload.h  client.cpp  client.h  connection.cpp  connection.h  connectionrequest.cpp  connectionrequest.h  directconnection.cpp  download.h  downloadmanager.cpp  downloadmanager.h  downloadrequest.h  error.h  filedownload.cpp  filelist.cpp  filelist.h  filelistdownload.cpp  hub.cpp  hub.h  listener.cpp  listener.h  operation.h  userinfo.h
tags/0.05/: README.txt
tags/0.05/kgui/: client.h  filelistwidget.h  hubwidget.ui  usermodel.cpp
tags/0.05/rufusdc/: CMakeLists.txt  README.txt  adcmessage.cpp  adcmessage.h  client.cpp  connection.cpp  directconnection.cpp  directconnection.h  directconnectionmanager.h  download.h  downloadmap.cpp  downloadmap.h  filelist.h  listener.h  operation.cpp  protocolexception.cpp  protocolexception.h  singleton.h
tags/0.1/kgui/: clientthreadhub.cpp  connectdialog.h  connectdialog.ui  hubwidget.cpp  main.cpp  userinfo.h
tags/0.1/rufusdc/: directconnectionmanager.cpp  download.cpp  error.cpp  filedownload.cpp  filedownload.h  filelistdownload.h  hub.h  hubmanager.cpp  hubmanager.h
trunk/: CMakeLists.txt  Doxyfile  README.txt
trunk/dcpp/: CMakeLists.txt  DCPlusPlus.cpp  SettingsManager.h  version.h
trunk/doc/: dcgetfilelist.tcpdump  downloadfromscratch-rufusdc.tcpdump  uncompressedownload.tcpdump
trunk/kgui/: CMakeLists.txt  actionfactory.cpp  actionfactory.h  client.cpp  client.h  clientthread.cpp  clientthread.h  clientthreadhub.h  connectdialog.cpp  connectdialog.h  downloadinfo.cpp  downloadinfo.h  filelistwidget.cpp  filelistwidget.h  hub.cpp  hub.h  hubwidget.cpp  hubwidget.h  hubwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchquery.cpp  searchquery.h  searchwidget.cpp  searchwidget.h  searchwidget.ui  smartsorttreeitem.cpp  tabcontent.cpp  tabcontent.h  transferinfo.cpp  transferinfo.h  transferwidget.cpp  transferwidget.h  userinfo.cpp  userinfo.h  usermodel.cpp  usermodel.h  utils.cpp  (+1 more)
trunk/rufusdc/: CMakeLists.txt  activedownload.h  client.cpp  client.h  connection.cpp  connection.h  directconnection.h  download.cpp  download.h  downloadrequest.cpp  downloadrequest.h  filedownload.h  filelist.cpp  filelist.h  hub.cpp  hub.h  listener.cpp  listener.h  userinfo.cpp
trunk/tools/: gentestfile.py
